--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
+        
+    - name: Build
+      run: go build -v./gorilla/...
 
     - name: Test
       run: go test -v ./gorilla/...
