--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, Rewrite ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, Rewrite ]
 
 jobs:
 
@@ -17,9 +17,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
-        
+
     - name: Build
-      run: go build -v ./gorilla/...
+      run: go build -v ./...
 
     - name: Test
-      run: go test -v ./gorilla/...
+      run: go test -v ./...
