--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,10 @@ jobs:
         go-version: 1.15
 
     - name: Build
-      run: go build -v ./...
+      run: |
+        GOOS=js
+        GOARCH=wasm
+        go build -v ./...
 
     - name: Test
       run: go test -v ./...
