--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,7 @@ jobs:
         go-version: 1.15
 
     - name: Build
-      run: |
-        GOOS=js
-        GOARCH=wasm
-        go build -v ./...
+      run: go build -v ./gorilla
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./gorilla
