--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.15
 
     - name: Build
-      run: go build -v ./gorilla
+      run: go build -v -o a ./gorilla
 
     - name: Test
-      run: go test -v ./gorilla
+      run: go test -v ./gorilla/...
