--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,11 @@ name: Go
 
 on:
   push:
-    branches: [ Rewrite, master ]
+    branches:
+      - *
   pull_request:
-    branches: [ Rewrite, master ]
+    branches:
+      - *
 
 jobs:
 
