--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,6 @@ on:
       - '*'
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,6 +20,7 @@ jobs:
         go-version: 1.15
 
     - name: Build
+      run: go build -v .
 
     - name: Test
       run: go test -v ./...
