--- a/.github/go.yml
+++ b/.github/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 1.0 ]
   pull_request:
-    branches: [ master ]
+    branches: [ 1.0 ]
 
 jobs:
 
