--- a/.github/go.yml
+++ b/.github/go.yml
@@ -1,20 +1,18 @@
-name: Go
+name: Test and coverage
 
 on: [push, pull_request]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15
-
-    - name: Run coverage
-        run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
-    - name: Upload coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.15'
+      - name: Run coverage
+        run: go test -race -coverprofile=coverage.txt -covermode=atomic
+      - name: Upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
