--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+leb128 = "0.2.4"
+strum = "0.20"
+strum_macros = "0.20"
+dyn-clone = "1.0.4"
