--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Test
-    - run: cargo test
+    - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
