--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gorilla"
+name = "gorilla-rs"
 version = "0.1.0"
 authors = ["SnowballSH <derek070211@gmail.com>"]
 edition = "2018"
