--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ strum = "0.20"
 strum_macros = "0.20"
 dyn-clone = "1.0.4"
 inner = "0.1.1"
+pest_derive = "2.1.0"
+pest = "2.1.3"
+lazy_static = "1.4.0"
